# test_appstream_screenshots

./: CMakeLists.txt  README.md  main.cpp
metadta/: Components-x86_64.xml
